Fix spacing for choices in details

--- a/skin/scss/blocks/production/_details.scss
+++ b/skin/scss/blocks/production/_details.scss
@@ -187,7 +187,7 @@
             border: #848484 solid 2px;
             cursor: pointer;
             height: $size;
-            margin: 0 2px;
+            margin: 2px;
             float: left;
             pointer-events: auto;
             position: relative;
